[tool.poetry]
name = "cipher_jp4100"
version = "0.1.0"
description = "caesar cipher"
authors = ["JingchaoPeng <jingchao.p@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
